# Lattice

./: .gitignore  ARCHITECTURE.md  README.md  docker-compose.neo4j.yml  pyproject.toml
.github/workflows/: ci.yml
src/lattice/: __init__.py  __main__.py
src/lattice/cache/: fingerprint.py  sqlite_cache.py
src/lattice/cli/: app.py
src/lattice/domain/: models.py  ports.py
src/lattice/enrich/: anthropic_enricher.py  llm_port.py
src/lattice/extract/: registry.py
src/lattice/extract/extractors/: python_ast.py  treesitter.py
src/lattice/graph/: community.py  csr_store.py  leiden.py  neo4j_store.py
src/lattice/ingest/: discovery.py
src/lattice/pipeline/: orchestrator.py  scheduler.py
src/lattice/query/: traversal.py
src/lattice/render/: html_writer.py  json_writer.py  mermaid_writer.py
src/lattice/serve/: graph_service.py  mcp_server.py
tests/: test_features.py  test_neo4j_integration.py  test_persistence_enrich.py  test_pipeline.py  test_serve.py  test_treesitter.py
