[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "lattice"
version = "0.1.0"
description = "An optimized, incremental code-to-knowledge-graph engine."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
# Core runs on the standard library alone. Adapters add optional deps.
dependencies = []

[project.optional-dependencies]
treesitter = ["tree-sitter>=0.21"]
networkx = ["networkx>=3.0"]
dev = ["pytest>=8.0"]

[project.scripts]
lattice = "lattice.cli.app:main"

[tool.hatch.build.targets.wheel]
packages = ["src/lattice"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
