[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "lattice"
version = "0.1.0"
description = "An optimized, incremental code-to-knowledge-graph engine."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
# Core runs on the standard library alone. Adapters add optional deps.
dependencies = []

[project.optional-dependencies]
# Runtime grammar fetch (downloads on first use).
treesitter = ["tree-sitter>=0.21", "tree-sitter-language-pack>=0.2"]
# Bundled, offline grammars — preferred in CI.
treesitter-grammars = [
    "tree-sitter>=0.21",
    "tree-sitter-javascript>=0.21",
    "tree-sitter-typescript>=0.21",
    "tree-sitter-go>=0.21",
    "tree-sitter-rust>=0.21",
    "tree-sitter-java>=0.21",
]
leiden = ["igraph>=0.11", "leidenalg>=0.10"]
neo4j = ["neo4j>=5.0"]
anthropic = ["anthropic>=0.40"]
networkx = ["networkx>=3.0"]
dev = ["pytest>=8.0"]

[project.scripts]
lattice = "lattice.cli.app:main"

[tool.hatch.build.targets.wheel]
packages = ["src/lattice"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
